scripts/k8s/es-single.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: elasticsearch
spec:
  type: NodePort
  ports:
  - name: db
    nodePort: 30920
    port: 9200
    protocol: TCP
    targetPort: 9200
  - name: transport
    nodePort: 30930
    port: 9300
    protocol: TCP
    targetPort: 9300    
  selector:
    run: elasticsearch
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      run: elasticsearch
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: elasticsearch
    spec:
      containers:
      - env:
        - name: discovery.type
          value: single-node
        image: elasticsearch:7.6.1
        name: elasticsearch
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: tramsport
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
status: {}
