scripts/k8s/gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 443
      targetPort: 443
      nodePort: 31443
      name: https
    - port: 80
      nodePort: 31080
      targetPort: 80
      name: http
  selector:
    app: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-dep
  namespace: default
spec:
  selector:
    matchLabels:
      app: gitlab
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - image: gitlab/gitlab-ce
          name: gitlab
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 443
              name: https
            - containerPort: 80
              name: http
            - containerPort: 22
              name: ssh
          volumeMounts:
            - name: gitlab-config
              mountPath: /etc/gitlab
            - name: gitlab-logs
              mountPath: /var/log/gitlab
            - name: gitlab-data
              mountPath: /var/opt/gitlab
      volumes:
        - name: gitlab-config
          hostPath:
            path: /Users/jianweilei/gitlab/config
            type: DirectoryOrCreate
        - name: gitlab-logs
          hostPath:
            path: /Users/jianweilei/gitlab/logs
            type: DirectoryOrCreate
        - name: gitlab-data
          hostPath:
            path: /Users/jianweilei/gitlab/data
            type: DirectoryOrCreate
