scripts/k8s/logstash.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: logstash
  name: logstash
  namespace: default
spec:
  serviceName: "logstash"
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - image: logstash:7.17.2
          name: logstash
          resources:
            requests:
              memory: "500Mi"
              cpu: "400m"
            limits:
              memory: "800Mi"
              cpu: "800m"
          volumeMounts:
            - name: logstash-yml-config
              mountPath: /usr/share/logstash/config/logstash.yml
              subPath: logstash.yml
            - name: logstash-config
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf
      volumes:
        - name: logstash-yml-config
          configMap:
            name: logstash-yml-config
        - name: logstash-config
          configMap:
            name: logstash-config
      #nodeSelector:
      # kubernetes.io/hostname: 172.16.30.1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logstash
  name: logstash
  namespace: default
spec:
  ports:
    - name: logstsh
      port: 5044
      protocol: TCP
      targetPort: 9600
  clusterIP: None
  selector:
    app: logstash
  type: ClusterIP
